--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-imageoptim": "^1.4.1",
     "grunt-sass": "^1.0.0",
     "grunt-svg2png": "^0.2.7",
