--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-imageoptim": "^1.4.1",
-    "grunt-sass": "^1.0.0",
+    "grunt-sass": "^1.1.0-beta",
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^2.0.1",
-    "handlebars": "^3.0.3",
+    "handlebars": "^4.0.3",
     "lodash": "^3.8.0",
-    "metalsmith": "^1.7.0",
+    "metalsmith": "^2.1.0",
     "metalsmith-branch": "0.0.4",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-pagination": "^1.1.0",
     "metalsmith-permalinks": "^0.4.0",
-    "metalsmith-sitemap": "0.0.9",
+    "metalsmith-sitemap": "1.0.0",
     "metalsmith-templates": "^0.7.0",
     "moment": "^2.10.2",
     "striptags": "^2.0.2"
