--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "metalsmith-branch": "0.0.4",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
+    "metalsmith-feed": "^0.2.0",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-pagination": "^1.1.0",
     "metalsmith-permalinks": "^0.4.0",
