--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-feed": "^0.2.0",
+    "metalsmith-layouts": "^1.4.2",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-pagination": "^1.1.0",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-sitemap": "1.0.0",
-    "metalsmith-templates": "^0.7.0",
     "moment": "^2.10.2",
     "striptags": "^2.0.2"
   }
