--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-svg2png": "^0.2.7",
     "grunt-svgmin": "^2.0.1",
     "handlebars": "^4.0.3",
+    "image-size": "^0.3.5",
     "lodash": "^3.8.0",
     "metalsmith": "^2.1.0",
     "metalsmith-branch": "0.0.4",
