--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   "dependencies": {},
   "engine": "node >= 0.10.x",
   "devDependencies": {
-    "cheerio": "^0.19.0",
-    "express": "^4.12.4",
-    "grunt": "^0.4.5",
-    "grunt-autoprefixer": "^3.0.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.12.0",
-    "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "cheerio": "^0.20.0",
+    "express": "^4.14.0",
+    "grunt": "^1.0.1",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-imageoptim": "^1.4.1",
-    "grunt-sass": "^1.1.0-beta",
+    "grunt-sass": "^1.2.0",
     "grunt-svg2png": "^0.2.7",
-    "grunt-svgmin": "^3.1.2",
-    "handlebars": "^4.0.3",
-    "image-size": "^0.4.0",
-    "lodash": "^4.0.0",
+    "grunt-svgmin": "^3.3.0",
+    "handlebars": "^4.0.5",
+    "image-size": "^0.5.0",
+    "lodash": "^4.13.1",
     "metalsmith": "^2.1.0",
     "metalsmith-branch": "0.0.4",
     "metalsmith-collections": "^0.7.0",
     "metalsmith-drafts": "0.0.1",
     "metalsmith-feed": "^0.2.0",
-    "metalsmith-layouts": "^1.4.2",
+    "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-pagination": "^1.1.0",
-    "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-pagination": "^1.4.0",
+    "metalsmith-permalinks": "^0.5.0",
     "metalsmith-sitemap": "1.0.0",
-    "moment": "^2.10.2",
-    "striptags": "^2.0.2"
+    "moment": "^2.14.1",
+    "striptags": "^2.1.1"
   }
 }
