--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dbushell-com",
+  "name": "dbushell.com",
   "description": "dbushell.com",
   "author": "David Bushell <david@dbushell.com>",
-  "version": "1.0.0",
+  "version": "8.0.0",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:dbushell/dbushell-com.git"
+    "url": "git@github.com:dbushell/dbushell.com.git"
   },
   "dependencies": {},
   "engine": "node >= 0.10.x",
