--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,10 @@
 Thumbs.db
 .Spotlight-V100
 .Trashes
-*.pyc
 .DS_Store
 Desktop.ini
-.sass-cache
 node_modules
+bower_components
+.sass-cache
 *.log
-httpdocs
-*.zip
-src-static/*
-build
-build-images
-tasks/tmp
+src/config.json
